Background vid and favicon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,6 +76,9 @@
             <li></li>
     </ul>
 </div >
+<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+  <source src="assets/img/loaofootage.mp4" type="video/mp4">
+</video>
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Hey there,<br>I'm <span class="bouncyboi">E</span><span class="bouncyboi">l</span><span class="bouncyboi">i</span><span class="bouncyboi">a</span>,</h1>
