About me and contact

--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
           <tr>
             <th><h3 style="color: #EDB518;">Toys "R" Sus</h3></th>
           </tr>
-          <tr class="">
-            <td><p>Details:</p>
+          <tr class="td-with-background1">
+            <td class=""><p>Details:</p>
             <ul>
               <li>First-person online multiplayer party game, inspired by <i>Among Us</i></li>
               <li>14 week development (20h/week) with a team of 5 programmers, 3 level designers and 4 artists</li>
               <li>Made in our own C++ and DirectX11 game engine</li>
             </ul></td>
-            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
-          <tr>
-            <td><p>My contributions:</p>
+          <tr class="td-with-background1">
+            <td class=""><p>My contributions:</p>
             <ul class="">
               <li class="">Entity-Component-System implementation</li>
               <li class="">Multi-threaded update-loop architecture for our engine</li>
@@ -138,8 +138,8 @@
             </ul>
           </td>
           </tr>
-          <tr class="toysrsus-video-mobile">
-            <td rowspan="2"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+          <tr class="toysrsus-video-mobile td-with-background1">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -148,8 +148,8 @@
           <tr>
             <th><h3 style="padding-top: 10px; color: #EDB518;">Loa of Death</h3></th>
           </tr>
-          <tr class="">
-            <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+          <tr class="td-with-background2">
+            <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
             <td><p>Details:</p>
@@ -159,7 +159,7 @@
               <li>Built from scratch using C++ and DirectX11</li>
             </ul></td>
           </tr>
-          <tr>
+          <tr class="td-with-background2">
             <td><p>My contributions:</p>
             <ul>
               <li>Entity-Component-System implementation</li>
@@ -169,8 +169,8 @@
             </ul>
           </td>
           </tr>
-          <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+          <tr class="toysrsus-video-mobile td-with-background2">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -183,10 +183,10 @@
             <td><p>Details:</p>
             <ul>
               <li>Atmospheric platform game</li>
-              <li>8 week development with a team of 5 programmers, 2 level designers and 4 artists</li>
+              <li>8 week development (20h/week) with a team of 5 programmers, 2 level designers and 4 artists</li>
               <li>Made in TGA2D, the school's in-house C++ rendering framework</li>
             </ul></td>
-            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -202,7 +202,7 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -212,7 +212,7 @@
             <th><h3 style="padding-top: 10px; color: #EDB518;">Stakeout</h3></th>
           </tr>
           <tr class="">
-            <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
             <td><p>Details:</p>
@@ -233,7 +233,7 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -246,10 +246,10 @@
             <td><p>Details:</p>
             <ul>
               <li>Action RPG game, inspired by <i>Hyper Light Drifter</i></li>
-              <li>8 week development with a team of 5 programmers, 3 level designers and 4 artists</li>
+              <li>8 week development (20h/week) with a team of 5 programmers, 3 level designers and 4 artists</li>
               <li>Made in TGA2D, the school's in-house C++ rendering framework</li>
             </ul></td>
-            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -258,7 +258,7 @@
             <ul class="">
               <li class="">GameObject, Component & Scene system</li>
               <li class="">Chunk-based dynamic loading of tile-based open world</li>
-              <li class="">Multi-threading: double-buffered rendering, asynchronous file loading & concurrent pathfinding</li>
+              <li class="">Multi-threading: double-buffered rendering, asynchronous loading & concurrent pathfinding</li>
               <li class="">Enemy and boss AI</li>
               <li class="">Particle system</li>
               <li class="">Various tools including: serialization system for player, enemy and boss values; particle editor, sequencing tool for AI behavior</li>
@@ -266,7 +266,7 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" autoplay loop muted poster="assets/img/Poster.PNG">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
               <source src="assets/img/web-bg.mp4" type="video/mp4">
             </video></td>
           </tr>
@@ -274,6 +274,36 @@
     </div>
   </section>
 </div>
+<div id="contact-and-about-bg">
+<div id="about">
+  <section class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <h1>About Me</h1>
+      <table class="table table-borderless">
+        <tr class="mobile-only">
+          <td style="text-align: center;"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
+        </tr>
+        <tr>
+          <td style="text-align: right;" class="desktop-only"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
+          <td id="about-me-bread"><p>Hejsan, Elia jag är.<br><br>Visste du att Doktor.se är Sveriges populäraste vårdapp? När du laddar ned Doktor.se-appen får du prata med sjuksköterskor, läkare och psykologer helt utan kostnad. Och du, vi svarar inom 3 minuter.
+          <br><br>Doktor.se; alltid i mobilen, fysiskt när det behövs.</p></td>
+        </tr>
+      </table>
+    </div>
+  </section>
+</div>
+<div id="contact">
+  <section class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <h1>Contact</h1>
+      <p>
+        <br><i class="bi bi-telephone-fill"></i><br>+46 73 646 8868<br>
+        <br><a href="mailto:my@email.address"><i class="bi bi-envelope-fill"></i><br>my@email.address</a><br>
+        <br><a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/"><i class="bi bi-linkedin"></i><br>Elia Rönning</a><br>
+      </p>
+    </div>
+  </section>
+</div></div>
 
   <script> /*
   <main id="main">
