--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
         </tr>
         <tr>
           <td id="about-me-bread"><p>Hejsan, Elia jag är.<br><br>Visste du att Doktor.se är Sveriges populäraste vårdapp? När du laddar ned Doktor.se-appen får du prata med sjuksköterskor, läkare och psykologer helt utan kostnad. Och du, vi svarar inom 3 minuter.
-            <br><br>Doktor.se; alltid i mobilen, fysiskt när det behövs.</p></td>
+            <br><br>Doktor.se; alltid i mobilen, fysiskt när det behövs.
+            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum aperiam nobis nisi obcaecati temporibus nesciunt, quaerat ad recusandae hic soluta ipsam odio ex, maxime eligendi culpa! Consectetur, harum fugiat.
+            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum aperiam nobis nisi obcaecati temporibus nesciunt, quaerat ad recusandae hic soluta ipsam odio ex, maxime eligendi culpa! Consectetur, harum fugiat.</p></td>
             <td style="text-align: center;" class="desktop-only"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
         </tr>
       </table>
