About me / CV test

--- a/index.html
+++ b/index.html
@@ -284,10 +284,23 @@
           <td style="text-align: center;"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
         </tr>
         <tr>
-          <td id="about-me-bread"><p>Hejsan, Elia jag är.<br><br>Visste du att Doktor.se är Sveriges populäraste vårdapp? När du laddar ned Doktor.se-appen får du prata med sjuksköterskor, läkare och psykologer helt utan kostnad. Och du, vi svarar inom 3 minuter.
-            <br><br>Doktor.se; alltid i mobilen, fysiskt när det behövs.
-            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum aperiam nobis nisi obcaecati temporibus nesciunt, quaerat ad recusandae hic soluta ipsam odio ex, maxime eligendi culpa! Consectetur, harum fugiat.
-            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum aperiam nobis nisi obcaecati temporibus nesciunt, quaerat ad recusandae hic soluta ipsam odio ex, maxime eligendi culpa! Consectetur, harum fugiat.</p></td>
+          <td id="about-me-bread"><p>
+            Hey there, I’m Elia Rönning.
+            <br><br>
+            My passion for making games started at the age of ten when I was introduced to the drag-and-drop game engine <i>GameMaker</i>. It didn’t take long before I was aspiring toward a career in game development. For the past two years, I have been studying game programming at <i>The Game Assembly</i> in Stockholm, where I’ve not only gotten to learn all about programming games in <i>C++</i>, but also gotten to make games cross-disciplinarily with people who share my passion. During my time at TGA, I’ve acquired a particular interest in developing easy-to-use tools for and in collaboration with my content creators as well-optimised engine systems to serve as a solid foundation for the games themselves.
+            <br><br>
+            I am a very playful person who likes to lighten the mood, but nevertheless earnest and determined when it comes down to it. My colleagues describe me as dependable, diligent and always obliging.
+            <br><br>
+            I have a huge passion for old movies, which I watch whenever I have spare time and collect on <i>Blu-ray</i>. Other hobbies include listening to progressive rock and jazz, hot beverages and cooking, as well as working on personal projects.
+            <br><br>
+            I am looking for a 30-week game programming internship placement starting autumn 2022, where I can continue to learn, grow and widen my ability. <a href="#contact" class="scrollto">Get in touch! I'd love to hear from you.</a>
+            <br><br>
+            <i class="bi bi-file-earmark-person"></i> CV: 
+            <a href="pdf.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
+              Preview</a> - 
+            <a href="assets/img/Test.pdf" download>Download</a>
+            <br><br>
+          </p></td>
             <td style="text-align: center;" class="desktop-only"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
         </tr>
       </table>
@@ -299,8 +312,8 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">
       <h1>Contact</h1>
       <p>
-        <br><i class="bi bi-telephone-fill"></i><br>+46 73 646 8868<br>
-        <br><a href="mailto:my@email.address"><i class="bi bi-envelope-fill"></i><br>my@email.address</a><br>
+        <br><a href="tel:+46736468868"><i class="bi bi-telephone-fill"></i><br>+46 73 646 8868</a><br>
+        <br><a href="mailto:ronning.elia01@gmail.com"><i class="bi bi-envelope-fill"></i><br>ronning.elia01@gmail.com</a><br>
         <br><a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/"><i class="bi bi-linkedin"></i><br>Elia Rönning</a><br>
       </p>
     </div>
