Minor color change

--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@
             <br><br>
             I am looking for a 30-week game programming internship placement starting autumn 2022, where I can continue to learn, grow and widen my ability. <a href="#contact" class="scrollto">Get in touch! I'd love to hear from you.</a>
             <br><br>
+            <span id="pdf-links" style="color: #EDB518;">
             <i class="bi bi-file-earmark-person"></i> CV: 
             <a href="pdf.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
               Preview</a> - 
             <a href="assets/img/Test.pdf" download>Download</a>
-            <br><br>
+            <br><br></span>
           </p></td>
             <td style="text-align: center;" class="desktop-only"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
         </tr>
